Fix border clipping out of bounds

--- a/src/components/styles/Content.css
+++ b/src/components/styles/Content.css
@@ -1,5 +1,5 @@
 .content {
-  max-width: 598px;
+  max-width: 600px;
   min-width: 0;
   border-left: 1px solid rgba(148, 167, 197, 0.3);
   border-right: 1px solid rgba(148, 167, 197, 0.3);
